# match-datacite-funders-to-ror-ids

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: convert_and_upload.py
src/: identifiers.rs  lib.rs  main.rs
src/extract/: mod.rs  parser.rs
src/query/: checkpoint.rs  client.rs  mod.rs
src/reconcile/: mod.rs  ror_data.rs
tests/: extract_tests.rs  hash_tests.rs  identifiers_tests.rs  integration_test.rs  query_tests.rs  reconcile_tests.rs
