[package]
name = "datacite-ror"
version = "0.1.0"
edition = "2021"
description = "Extract DataCite funder names and match them to ROR IDs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.17"
num_cpus = "1.16"
rayon = "1.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
